# RESUME_GAP_ANALYSER

./: README.md  main.py  pyproject.toml
data/: ats_knowledge.json
data/faiss_index/: index.faiss  index.pkl
notebooks/: RAG.ipynb
scripts/: generate_knowledge.py
src/agent/: knowledge.py  tools.py
