[project]
name = "resume-gap-analyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.9.0",
    "langchain>=1.3.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.1.0",
    "minsearch>=0.1.0",
    "openai>=1.75.0",
    "pillow>=11.0.0",
    "pymupdf>=1.25.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "streamlit>=1.45.0",
    "tiktoken>=0.9.0",
    "pytest>=8.0.0",
]
